syntax = "proto3";
package service;

option go_package = "./proto";

message DialAddr {
  bytes ip = 1;
  uint32 port = 2;
	string zone = 3;  // IPv6 scoped addressing zone
}
